test/users/shetag/iteratorWithOn.good
iteratorWithOn.chpl:3: In iterator 'g':
iteratorWithOn.chpl:6: error: invalid use of 'on' in serial iterator
